--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 1.03 (June 2013)
+=======================
+
+* Improved code-design with respect to forward and reverse strand alignment
+
+* Additional menu items for saving TFBS mapping coordinates.
+
 Version 1.02 (May 2013)
 =======================
 
